<?xml version="1.0"?>
<package>
  <name>wall_detector</name>
  <version>0.0.0</version>
  <description>The wall_detector package</description>

  <maintainer email="santiago@todo.todo">santiago</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>irobotcreate2</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>irobotcreate2</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
